test/tests/errors/error-function-no-rec.sm
// true
// false
// false
/**/
/**/

program {
    func sum(x: int): int {
        sum(x)
    }
    output sum(5);
}